# lib/api-spec/openapi.yaml
@@ -547,6 +547,8 @@ components:
           type: ["string", "null"]
         imagemUrl3:
           type: ["string", "null"]
+        imagemUrl4:
+          type: ["string", "null"]
         dataCriacao:
           type: string
 
@@ -576,6 +578,8 @@ components:
           type: string
         imagemUrl3:
           type: string
+        imagemUrl4:
+          type: string
 
     ObraUpdate:
       type: object
@@ -601,6 +605,8 @@ components:
         imagemUrl2:
           type: string
         imagemUrl3:
+          type: string
+        imagemUrl4:
           type: string
 
     Evento:
